--- a/sjfnw/templates/grants/includes/list_drafts.html
+++ b/sjfnw/templates/grants/includes/list_drafts.html
@@ -23,7 +23,7 @@
       </div>
     {% endif %}
     <div class="col col-1of8">
-      <button class="subtle-button" title="discard draft" onclick="confirmation('{{ draft.pk }}', '{{ draft.grant_cycle }}')">Discard</button>
+      <button class="text-button" title="discard draft" onclick="confirmation('{{ draft.pk }}', '{{ draft.grant_cycle }}')">Discard</button>
     </div>
   </div>
 {% endfor %}
