--- a/sjfnw/templates/grants/includes/list_submitted.html
+++ b/sjfnw/templates/grants/includes/list_submitted.html
@@ -9,45 +9,53 @@
     <div class="col col-1of3">
       <a href="/grants/view/{{ sub.pk }}">View submitted application</a>
     </div>
+  </div>
 
-    {% for award in sub.awards %}
+  {% for award in sub.awards %}
+    {% if award.agreement_mailed %}
       <div class="row">
-        <div class="col col-1of3">
-          {% if award.agreement_mailed %}
-            Agreement mailed {{ award.agreement_mailed|date:"n/j/y" }},
-            {% if award.agreement_returned %}
-              returned {{ award.agreement_returned|date:"n/j/y" }}.
-            {% else %}
-              <span class="due">due {{ award.agreement_due|date:"n/j/y" }}</span>.
-            {% endif %}
+        <div class="col col-1of3 empty"></div>
+        <div class="col col-2of3">
+          Agreement mailed {{ award.agreement_mailed|date:"n/j/y" }},
+          {% if award.agreement_returned %}
+            returned {{ award.agreement_returned|date:"n/j/y" }}.
+          {% else %}
+            <span class="due">due {{ award.agreement_due|date:"n/j/y" }}</span>.
           {% endif %}
         </div>
       </div>
+    {% endif %}
 
+    {% for yer in award.yearendreport_set.all %}
       <div class="row">
-        <div class="col col-1of3">
-          {% for yer in award.yearendreport_set.all %}
-            {% if forloop.counter > 1 %}<br>{% endif %}
-            <a href="{% url 'sjfnw.grants.views.view_yer' report_id=yer.pk %}">Year end report</a> submitted {{ yer.submitted|date:"n/j/y" }}.
-          {% endfor %}
-
-          {% now "Y-m-d" as todays_date %}
-          {% for single_yer_due in award.yers_due %}
-            {% if forloop.first %}
-              <div class="due"> <a href="/report/{{ award.pk }}{{ user_override|default:'' }}">Year end report</a>
-            {% else %}
-              <div>Year end report
-            {% endif %}
-            {% if todays_date > single_yer_due|date:"Y-m-d" %}
-              <span style="color:red">past</span>
-            {% endif %}
-              due {{ single_yer_due|date:"n/j/y" }}
-            </div>
-          {% endfor %}
+        <div class="col col-1of3 empty"></div>
+        <div class="col col-2of3">
+          <a href="{% url 'sjfnw.grants.views.view_yer' report_id=yer.pk %}">Year end report</a> submitted {{ yer.submitted|date:"n/j/y" }}.
         </div>
       </div>
     {% endfor %}
-  </div>
+
+    {% now "Y-m-d" as todays_date %}
+    {% for single_yer_due in award.yers_due %}
+      <div class="row">
+        <div class="col col-1of3 empty"></div>
+        <div class="col col-2of3">
+          {% if forloop.first %}
+            <div class="due"><a href="/report/{{ award.pk }}{{ user_override|default:'' }}">Year end report</a>
+          {% else %}
+            <div>Year end report
+          {% endif %}
+          {% if todays_date > single_yer_due|date:"Y-m-d" %}
+            <span style="color:red">past</span>
+          {% endif %}
+            due {{ single_yer_due|date:"n/j/y" }}
+          </div>
+        </div>
+      {% endfor %}
+      </div>
+    </div>
+  {% endfor %}
+
 {% empty %}
   None found
 {% endfor %}
