--- a/sjfnw/templates/grants/email_yer_due.html
+++ b/sjfnw/templates/grants/email_yer_due.html
@@ -21,7 +21,7 @@
 
 <div align="center">
   <p>
-    <b><a href="{{ base_url }}{% url 'sjfnw.grants.views.year_end_report' award_id=award.pk %}"> Click here to fill out your Year-End Report</a></b>
+    <b><a href="{{ base_url }}{% url 'grants:year_end_report' award_id=award.pk %}"> Click here to fill out your Year-End Report</a></b>
   </p>
 </div>
 
