--- a/sjfnw/templates/grants/org_home.html
+++ b/sjfnw/templates/grants/org_home.html
@@ -46,7 +46,7 @@
   <h4>Tools</h4>
   <ul>
     <li><a href="/apply/copy{{ user_override|default:'' }}">Copy/rollover an application</a></li>
-    <li><a href="{% url 'sjfnw.grants.views.rollover_yer' %}{{ user_override|default:'' }}">Copy/rollover a year-end report</a></li>
+    <li><a href="{% url 'grants:rollover_yer' %}{{ user_override|default:'' }}">Copy/rollover a year-end report</a></li>
   </ul>
 </div>
 
