--- a/sjfnw/templates/fund/not_approved.html
+++ b/sjfnw/templates/fund/not_approved.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <h4>Your account hasn't been approved for use with any giving projects yet.</h4>
-<p>See your <a href='{% url 'sjfnw.fund.views.manage_account' %}'>projects page</a> for more info.</p>
+<p>See your <a href='{% url 'fund:manage_account' %}'>projects page</a> for more info.</p>
 <p>Approval can take several days.  Check with your project facilitators if you have questions.</p>
 {% endblock %}
