--- a/sjfnw/templates/grants/base.html
+++ b/sjfnw/templates/grants/base.html
@@ -26,7 +26,7 @@
 {% block body %}
   <div id="org-wrapper">
     <header>
-      <a href="{% url "sjfnw.grants.views.org_home" %}{{ user_override|default:'' }}">
+      <a href="{% url 'grants:home' %}{{ user_override|default:'' }}">
         <img class="logo" src="/static/images/logo_horiz.png" align="middle" alt="Social Justice Fund NW Logo">home
       </a>
     </header>
@@ -44,7 +44,7 @@
 
     <footer class="row">
       <div class="col col-1of4">
-        <a href="{% url "sjfnw.grants.views.org_support" %}">support</a>
+        <a href="{% url 'grants:support' %}">support</a>
       </div>
       <div class="col col-1of4">
         <a href="http://socialjusticefund.org">socialjusticefund.org</a>
@@ -53,7 +53,7 @@
         {% if user.is_authenticated %}
           {{user.username}} | <a href="/logout">log out</a>
         {% elif not register %}
-          <a href="{% url "sjfnw.grants.views.org_login" %}">log in</a>
+          <a href="{% url 'grants:login' %}">log in</a>
         {% endif %}
     </footer>
   </div>
